Fix text overflow in categories section

--- a/src/styles/components/_categories-card.scss
+++ b/src/styles/components/_categories-card.scss
@@ -3,6 +3,7 @@
 
 .categories-card {
   width: 100%;
+  max-width: 294px;
   border-radius: 20px;
   transition: background-color 0.3s ease, transform 0.3 ease;
   padding: $space-lg;
@@ -25,6 +26,7 @@
     font-size: $fz-lg;
     line-height: $lh-ml;
     margin-block: $space-base 0;
+    white-space: wrap;
   }
 
   &__meta {
